# ccjieba

./: .clang-format  .clang-tidy  .clangd  .cmake-format.json  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  TODO.md  demo.cc
.github/workflows/: docs-trigger.yml  lint.yml
docs/: Doxyfile  book.toml
docs/src/: README.md  SUMMARY.md  data-formats.md  getting-started.md  introduction.md  user-dict.md
docs/src/algorithms/: full.md  hmm.md  mix.md  mp.md  query.md
docs/src/api/: jieba.md  keyword.md  tagger.md
scripts/: pre-commit
src/: jieba.cc
src/algo/: CLAUDE.md  extractor.cc  extractor.hh  full.cc  full.hh  hmm.cc  hmm.hh  internal.hh  mix.cc  mix.hh  mp.cc  mp.hh  query.cc  query.hh  tagger.cc  tagger.hh  viterbi.hh
src/include/: CLAUDE.md  jieba.hh  keyword.hh
src/include/index/: CLAUDE.md  hmmodel.hh  idf.hh  stop_words.hh  trie.hh
src/include/utils/: CLAUDE.md  io.hh
src/index/: CLAUDE.md  hmmodel.cc  idf.cc  stop_words.cc  trie.cc
src/utils/: CLAUDE.md  dag.hh  io.cc  pre_segment.cc  pre_segment.hh  str_utils.cc  str_utils.hh
tests/: jieba_test.cc
tests/algo/: algo_test.cc
tests/index/: hmm_index_test.cc  idf_test.cc  stop_words_test.cc  trie_test.cc
tests/utils/: io_test.cc  pre_segment_test.cc  str_utils_test.cc
